--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
   </build>
   <dependencies>
 <dependency>
-	<groupId>org.xerial</groupId>
-	<artifactId>sqlite-jdbc</artifactId>
-	<version>3.7.2</version>
+	<groupId>org.hsqldb</groupId>
+	<artifactId>hsqldb</artifactId>
+	<version>2.0.0</version>
 </dependency>
-              <dependency>
+                          <dependency>
 	<groupId>javax.persistence</groupId>
 	<artifactId>persistence-api</artifactId>
 	<version>1.0-rev-1</version>
@@ -68,8 +68,23 @@
 		<artifactId>hibernate</artifactId>
 		<version>3.2.5.ga</version>
 	</dependency>
-
-
+<dependency>
+	<groupId>javax.transaction</groupId>
+	<artifactId>jta</artifactId>
+	<version>1.1</version>
+</dependency>
+            
+<dependency>
+	<groupId>postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+	<version>9.1-901.jdbc4</version>
+</dependency>
+            <dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20140107</version>
+</dependency>
+            
 <dependency>
 	<groupId>org.springframework</groupId>
 	<artifactId>spring-tx</artifactId>
